[package]
name = "tiksync"
version = "1.0.2"
edition = "2021"
authors = ["0xwolfsync <contact@tik-sync.com>"]
description = "TikTok Live SDK for Rust — Real-time chat, gifts, likes & viewer events"
license = "MIT"
repository = "https://github.com/tiksync/tiksync-rust"
homepage = "https://tik-sync.com"
keywords = ["tiktok", "tiktok-live", "websocket", "api", "sdk"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
urlencoding = "2.1.3"
http = "1.4.0"
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.10.0"
hex = "0.4.3"
uuid = { version = "1.22.0", features = ["v4"] }
